--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,11 @@
         <item>Other</item>
     </string-array>
 
+    <string-array name="role_status_options">
+        <item>Active</item>
+        <item>Suspend</item>
+    </string-array>
+
     <string name="pin_home_notifications_description">Notifications</string>
     <string name="pin_home_profile_description">Profile</string>
     <string name="pin_home_welcome_default">Hello, User!</string>
