--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,9 +3,10 @@
 
     <!-- This array provides the options for the role spinner in CreateUserAccountActivity -->
     <string-array name="user_roles">
+        <item>User admin</item>
         <item>PIN</item>
-        <item>Admin</item>
         <item>CSR</item>
+        <item>Platform Manager</item>
     </string-array>
     <string-array name="request_types">
         <item>Medical Transport</item>
